--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,7 +8,18 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-  
+
+  services:
+     redis: 
+       image: redis
+       # Set health checks to wait until redis has started
+       options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+       ports:
+         - 6379:6379
     steps:
       - uses: actions/checkout@v4
 
