--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -7,10 +7,22 @@ on:
     # Publish `v1.2.3` tags as releases.
     tags:
       - v*
-jobs:
 
+jobs:
   publish-package:
     runs-on: ubuntu-latest
+
+  services:
+     redis: 
+       image: redis
+       # Set health checks to wait until redis has started
+       options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+       ports:
+         - 6379:6379
     steps:
       - uses: actions/checkout@v4
       
