--- a/src/Soenneker.Redis.Client.Server.csproj
+++ b/src/Soenneker.Redis.Client.Server.csproj
@@ -14,7 +14,7 @@
         <AssemblyName>Soenneker.Redis.Client.Server</AssemblyName>
         <PackageId>Soenneker.Redis.Client.Server</PackageId>
         <PackageTags>redis server client c# .net dotnet</PackageTags>
-        <Copyright>Copyright © 2024 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2023-2024 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
