--- a/src/Soenneker.Redis.Client.Server.csproj
+++ b/src/Soenneker.Redis.Client.Server.csproj
@@ -36,9 +36,9 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
-
-        
-
-        <PackageReference Include="Soenneker.Redis.Util" Version="2.1.1679" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <PackageReference Include="Soenneker.Redis.Client" Version="2.1.537" />
     </ItemGroup>
 </Project>
