Move to new structure

--- a/test/Soenneker.Redis.Client.Server.Tests/Soenneker.Redis.Client.Server.Tests.csproj
+++ b/test/Soenneker.Redis.Client.Server.Tests/Soenneker.Redis.Client.Server.Tests.csproj
@@ -32,7 +32,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Soenneker.Redis.Client.Server.csproj" />
+        <ProjectReference Include="..\..\src\Soenneker.Redis.Client.Server.csproj" />
     </ItemGroup>
 
 </Project>
